# claude-plugin

./: .mcp.json  CHANGELOG.md  LICENSE  PluginSection.tsx  README.md  install.sh  landing-plugin.html
.claude-plugin/: plugin.json
commands/: tokenstree.md
mcp-server/: pyproject.toml
mcp-server/tokenstree_mcp/: __init__.py  server.py
skills/tokenstree-guide/: SKILL.md
